GNOME Bugzilla – Bug 768756
GtkFileChooserNativePortal uses incorrect response id
Last modified: 2016-07-13 11:02:47 UTC
Created attachment 331381 [details] [review] [PATCH] GtkFileChooserNativePortal: Use correct response code for accept As documented[1] it should use ACCEPT. [1] - https://developer.gnome.org/gtk3/stable/gtk3-GtkFileChooserNative.html