GtkFileChooserNativePortal: Use correct response code for accept

As per the documentation of GtkFileChooserNative.

https://bugzilla.gnome.org/show_bug.cgi?id=768756